--- a/main.css
+++ b/main.css
@@ -18,12 +18,12 @@ body {
     background: white;
     padding: 10px;
     border: 5px solid black;
-    display: flex;
+    display: block;
     
   }
 
 .item-1 {
-    background: #ff7300;
+    background: green;
     color: white;
     padding: 10px;
     border: 5px solid black;
@@ -31,7 +31,7 @@ body {
 }
 
 .item-2 {
-    background: #ff9640;
+    background: blue;
     color: white;
     padding: 10px;
     border: 5px solid black;
@@ -41,38 +41,10 @@ body {
 }
 
 .item-3 {
-    background: #ff9640;
+    background: red;
     color: white;
     padding: 10px;
     border: 5px solid black;
     margin: 10px;
     height: 250px;
-}
-
-.item-4 {
-    background: #f5c096;
-    color: white;
-    padding: 10px;
-    border: 5px solid black;
-    margin: 10px;
-    width: 300px;
-    height: 300px;
-}
-
-.item-5 {
-    background: #d3c0b1;
-    color: white;
-    padding: 10px;
-    border: 5px solid black;
-    margin: 10px;
-    width: 350px;
-}
-
-.item-6 {
-    background: #d3c0b1;
-    color: white;
-    padding: 10px;
-    border: 5px solid black;
-    margin: 10px;
-    width: 350px;
 }
